--- a/training/Phobert_Finetune_Trainer.ipynb
+++ b/training/Phobert_Finetune_Trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-08T02:28:39.174035Z",
@@ -13,24 +13,16 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "datasets 4.0.0 requires huggingface-hub>=0.24.0, but you have huggingface-hub 0.23.0 which is incompatible.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -U unidecode underthesea --quiet\n",
-    "!pip install -U transformers==4.40.2 huggingface-hub==0.23.0 peft==0.10.0 --quiet"
+    "!pip install -U transformers==4.40.2 huggingface-hub==0.23.0 peft==0.10.0 --quiet\n",
+    "!pip install -U wandb --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-08T02:28:48.274853Z",
@@ -41,7 +33,33 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vtm-admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter:\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter:\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter:\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: C:\\Users\\vtm-admin\\_netrc\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mnvthao43-hnvn\u001b[0m (\u001b[33mnvthao43-hnvn-dan-com\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re, json, random\n",
     "import numpy as np\n",
@@ -66,7 +84,9 @@
     "    TrainerCallback, AutoConfig\n",
     ")\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "import wandb\n",
+    "wandb.login()"
    ]
   },
   {
@@ -1041,10 +1061,11 @@
     "    fp16=True,\n",
     "    max_grad_norm=0.5,\n",
     "    logging_steps=50,\n",
-    "    report_to=\"none\",\n",
+    "    report_to=\"wandb\",\n",
     "    seed=RANDOM_STATE,\n",
     "    dataloader_num_workers=2,\n",
-    "    label_smoothing_factor=0.1\n",
+    "    label_smoothing_factor=0.1,\n",
+    "    run_name=\"phobert_sentiment_v1\", # tên hiển thị trên dashboard wandb\n",
     ")"
    ]
   },
@@ -1140,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-08T02:29:43.398437Z",
@@ -1177,6 +1198,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.init(project=\"phobert_sentiment\", name=\"run_kaggle_v1\", config={\n",
+    "    \"epochs\": 3,\n",
+    "    \"lr\": 2e-5,\n",
+    "    \"batch_size\": 16\n",
+    "})\n",
+    "\n",
+    "print(\"✅ wandb setup complete!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1185,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-08T02:29:43.475449Z",
@@ -1415,6 +1451,7 @@
     "\n",
     "# Start training\n",
     "trainer_result = trainer.train()\n",
+    "wandb.finish()\n",
     "\n",
     "print(\"✅ Training completed!\")\n",
     "print(f\"🏆 Best validation f1_macro: {trainer.state.best_metric:.4f}\")"
